[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = "AOC 2022 Scripts"
authors = ["Cuong <cuong.duong242@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
loguru = "^0.6.0"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
